WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278012
[Cocoa] PDFPluginBase::dictionaryPopupInfoForSelection() should not be a no-op on iOS family
https://bugs.webkit.org/show_bug.cgi?id=278012
Summary
[Cocoa] PDFPluginBase::dictionaryPopupInfoForSelection() should not be a no-o...
Abrar Rahman Protyasha
Reported
2024-08-13 01:47:54 PDT
It's currently a no-op because of the use of NSFont(Manager), but let's fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-13 01:48:05 PDT
<
rdar://problem/133745817
>
Abrar Rahman Protyasha
Comment 2
2024-08-13 02:48:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32107
EWS
Comment 3
2024-08-13 13:10:09 PDT
Committed
282186@main
(44c9bb0d8bbf): <
https://commits.webkit.org/282186@main
> Reviewed commits have been landed. Closing PR #32107 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug