[Cocoa] PDFPluginBase::dictionaryPopupInfoForSelection() should not be a no-op on iOS family https://bugs.webkit.org/show_bug.cgi?id=278012 rdar://133745817

Reviewed by Aditya Keerthi.

Previously, this function was a no-op on iOS family platforms because of
its use of NSFont(Manager). We can simply use our CocoaFont definition
and the -[UIFont fontWithSize:] instance method as suitable alternatives
to make this function cross platform.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::dictionaryPopupInfoForSelection):

Canonical link: https://commits.webkit.org/282186@main