Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm
@@ -51,6 +51,7 @@
 #import <WebCore/Document.h>
 #import <WebCore/EventNames.h>
 #import <WebCore/FocusController.h>
+#import <WebCore/FontCocoa.h>
 #import <WebCore/Frame.h>
 #import <WebCore/GraphicsContext.h>
 #import <WebCore/HTMLPlugInElement.h>
@@ -1132,25 +1133,29 @@ DictionaryPopupInfo PDFPluginBase::dictionaryPopupInfoForSelection(PDFSelection 
     if (!selection.string.length)
         return dictionaryPopupInfo;
 
-#if PLATFORM(MAC)
-    NSRect rangeRect = rectForSelectionInRootView(selection);
     NSAttributedString *nsAttributedString = selection.attributedString;
     RetainPtr scaledNSAttributedString = adoptNS([[NSMutableAttributedString alloc] initWithString:[nsAttributedString string]]);
-    NSFontManager *fontManager = [NSFontManager sharedFontManager];
+
     auto scaleFactor = contentScaleFactor();
 
     [nsAttributedString enumerateAttributesInRange:NSMakeRange(0, [nsAttributedString length]) options:0 usingBlock:^(NSDictionary *attributes, NSRange range, BOOL *stop) {
         RetainPtr<NSMutableDictionary> scaledAttributes = adoptNS([attributes mutableCopy]);
 
-        NSFont *font = [scaledAttributes objectForKey:NSFontAttributeName];
+        CocoaFont *font = [scaledAttributes objectForKey:NSFontAttributeName];
         if (font) {
-            font = [fontManager convertFont:font toSize:font.pointSize * scaleFactor];
+            auto desiredFontSize = font.pointSize * scaleFactor;
+#if USE(APPKIT)
+            font = [[NSFontManager sharedFontManager] convertFont:font toSize:desiredFontSize];
+#else
+            font = [font fontWithSize:desiredFontSize];
+#endif
             [scaledAttributes setObject:font forKey:NSFontAttributeName];
         }
 
         [scaledNSAttributedString addAttributes:scaledAttributes.get() range:range];
     }];
 
+    NSRect rangeRect = rectForSelectionInRootView(selection);
     rangeRect.size.height = nsAttributedString.size.height * scaleFactor;
     rangeRect.size.width = nsAttributedString.size.width * scaleFactor;
 
@@ -1163,9 +1168,6 @@ DictionaryPopupInfo PDFPluginBase::dictionaryPopupInfoForSelection(PDFSelection 
     dictionaryPopupInfo.origin = rangeRect.origin;
     dictionaryPopupInfo.textIndicator = dataForSelection;
     dictionaryPopupInfo.platformData.attributedString = WebCore::AttributedString::fromNSAttributedString(scaledNSAttributedString);
-#else
-    UNUSED_PARAM(presentationTransition);
-#endif
 
     return dictionaryPopupInfo;
 }
